# objgl

./: .gitignore  .gitmodules  CMakeLists.txt  collapser.cpp  collapser.h  main.cpp  main.h  obj.cpp  obj.h
